# vulcan-notify

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  entrypoint.sh  poc_imessage.py  prompts.toml  pyproject.toml
.claude-plugin/: semver.json
.githooks/: pre-commit
deploy/: backup-db.sh  vulcan-backup.service  vulcan-backup.timer  vulcan-deploy.service  vulcan-deploy.sh  vulcan-deploy.timer
docs/: architecture.md  deployment.md  eduvulcan-api.md  practice-mvp-plan.md
docs/ideation/vulcan-notify/: contract.md  spec-phase-1.md  spec-phase-2.md  spec-phase-3.md
docs/superpowers/specs/: 2026-03-22-ical-calendar-integration-design.md
src/vulcan_notify/: __init__.py  __main__.py  api.py  auth.py  calendar.py  client.py  config.py  db.py  differ.py  display.py  ics.py  models.py  mqtt.py  notifier.py  poller.py  summarizer.py  sync.py  text.py  tui.py
src/vulcan_notify/static/practice/: app.js  index.html  palettes.html  styles.css
src/vulcan_notify/static/practice/sets/: demo-typy-pytan.json  dzialania-pisemne-1.json  solya-prep-1-os-skracanie.json  solya-prep-2-porownywanie.json  solya-prep-3-mieszane.json  solya-prep-4-dodawanie.json  ulamki-dziesietne-1.json  ulamki-zwykle-1.json  ulamki-zwykle-2.json
tests/: conftest.py  test_api.py  test_calendar.py  test_client.py  test_db.py  test_differ.py  test_display.py  test_ics.py  test_mqtt.py  test_notifier.py  test_substitutions.py  test_summarizer.py  test_sync.py
